[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Paul Horn <dev@knutwalker.engineer>"]
description = "Advent of Code 2020 solutions for @knutwalker"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
bit-set = "0.5.2"
chrono = "0.4.19"
either = "1.6.1"
fancy-regex = "0.7.1"
fastrand = "1.5.0"
im = "15.0.0"
itertools = "0.10.1"
num = "0.4.0"
once_cell = "1.8.0"
regex = "1.5.4"
thiserror = "1.0.30"
